<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">网速指示器</string>
    <string name="notify_net_speed_msg" formatted="false">上传：<xliff:g example="10.1KB/s" id="speed">%s</xliff:g> • 下载：<xliff:g example="10.1KB/s" id="speed">%s</xliff:g></string>
    <string name="notify_net_speed_sub" formatted="false">今日：<xliff:g example="10.5GB" id="usage">%s</xliff:g> • 本月：<xliff:g example="10.5GB" id="usage">%s</xliff:g></string>
    <string name="tile_net_speed_label" translatable="false">↿%s ⇃%s</string>
    <string name="switch_on">打开</string>
    <string name="switch_off">关闭</string>
    <string name="action_close">关闭</string>
    <string name="expand_button_title" tools:ignore="PrivateResource">更多设置</string>

    <string name="label_net_speed">网速指示器</string>
    <string name="label_net_speed_interval">刷新间隔</string>
    <string name="label_net_speed_hide_lock_notification">隐藏锁屏通知</string>
    <string name="label_net_speed_notify_clickable">通知可被点击</string>
    <string name="label_net_speed_mode">显示模式</string>
    <string name="label_net_speed_auto_start">开机自启</string>
    <string name="label_net_speed_notify_quick_closeable">通知快捷关闭</string>
    <string name="label_night_mode">夜间模式</string>
    <string name="label_net_speed_usage">显示每日和每月流量使用</string>
    <string name="label_about">关于</string>
    <string name="label_ignore_battery_optimize">忽略电池优化</string>

    <string name="summary_net_speed">在状态栏显示当前网速</string>
    <string name="summary_net_speed_hide_lock_notification">锁屏时默认会隐藏通知，如果无效时才需要去设置隐藏锁屏通知</string>
    <string name="summary_net_speed_notify_clickable">点击通知打开应用设置界面</string>
    <string name="summary_net_speed_auto_start">跟随系统启动前台服务</string>
    <string name="summary_net_speed_notify_quick_closeable">在网速通知上添加一个关闭按钮</string>
    <string name="summary_night_mode_follow_system">跟随系统</string>
    <string name="summary_net_speed_usage">通知显示移动数据和WLAN流量使用总和</string>
    <string name="summary_about_version" translatable="false">v%s (%d)</string>
    <string name="summary_ignore_battery_optimize">添加电池优化白名单，防止前台服务无法保活（针对部分设备）</string>

    <string name="usage_states_title">使用情况访问授权</string>
    <string name="usage_stats_msg">统计流量使用情况时需要允许使用情况访问权限。</string>
    <string name="alert_msg_notification_disable">通知权限未开启，网速指示器将无法正常显示</string>
    <string name="settings">去设置</string>
    <string name="help">帮助</string>
    <string name="access">去授权</string>
    <string name="dont_ask">不再提示</string>
    <string name="desc_net_speed_notify">网速指示器需要通过通知来显示</string>
    <string name="chooser_label_browse">选择浏览器打开</string>

    <string name="url_play_store" translatable="false">https://play.google.com/store/apps/details?id=com.dede.nativetools</string>
    <string name="url_cool_apk" translatable="false">https://www.coolapk.com/apk/com.dede.nativetools</string>
    <string name="url_github" translatable="false">https://github.com/hushenghao/NativeTools</string>
    <string name="url_hide_lock_notification" translatable="false">https://github.com/hushenghao/NativeTools/wiki/Hide-lock-screen-notification</string>
    <string name="url_privacy_agreement" translatable="false">https://github.com/hushenghao/NativeTools/wiki/%E9%9A%90%E7%A7%81%E5%8D%8F%E8%AE%AE</string>
    <string name="url_alipay_payment_code" translatable="false">https://qr.alipay.com/fkx102121bvcoglww05av58</string>
    <string name="url_wx_payment_code" translatable="false">wxp://f2f0HUx189brtInq9P5t6f8ei40cJnbCmh6DdC9gVai6cHBPAb40fxNLfCQBMZCGvxQP</string>
    <string name="url_paypal_payment_code" translatable="false">https://paypal.me/dede2233?country.x=C2&amp;locale.x=zh_XC</string>
    <string name="payment_eth_address" translatable="false">0xd6Cbe7E6C6eD7E3DeA3D733D29f4f3884C6211c2</string>
    <string name="github" translatable="false">Github</string>
    <string name="chooser_label_market">选择应用商店</string>
    <string name="label_open_source">开源相关</string>
    <string name="action_share">分享</string>

    <string name="share_text" formatted="false">发现了一个好用的小工具“%s”快去下载吧！%s</string>
    <string name="action_beta" translatable="false">Beta</string>
    <string name="action_feedback">问题反馈</string>
    <string name="email" translatable="false">dede.hu@qq.com</string>
    <string name="url_pgyer" translatable="false">https://www.pgyer.com/U9kJ</string>
    <string name="url_firebase_app_distribution" translatable="false">https://appdistribution.firebase.dev/i/fcdac68f4991245f</string>
    <string name="toast_copyed">已复制</string>
    <string name="label_net_speed_toggle">切换</string>
    <string name="alert_msg_hide_lock_notification">有时候通知无法隐藏可能是锁屏设置引起的。在设置中找到“隐藏锁屏通知”，选择“仅显示敏感内容”或“隐藏所有通知”。</string>
    <string name="label_general">通用</string>
    <string name="label_notification">通知</string>
    <string name="label_other">其他</string>
    <string name="label_net_speed_hide_notification">隐藏通知栏通知</string>
    <string name="summary_net_speed_hide_notification">通过替换默认通知样式来隐藏通知（可能不支持所有设备）</string>
    <string name="i_know">我知道了</string>
    <string name="tip_easter_egg">彩蛋</string>
    <string name="action_rate">给个好评</string>
    <string name="action_donate">捐赠</string>
    <string name="label_coffee">请我喝一杯咖啡？</string>
    <string name="toast_saved">已保存</string>
    <string name="label_home">首页</string>
    <string name="toast_open_battery_optimization">请找到“网速指示器”，并手动开启电池优化</string>
    <string name="label_android" translatable="false">Android</string>
    <string name="label_privacy_agreement">隐私协议</string>
    <string name="label_net_speed_style">字体样式</string>
    <string name="label_net_speed_advanced">高级设置</string>
    <string name="summary_net_speed_advanced">自定义显示样式</string>
    <string name="label_net_speed_y_offset">Y轴偏移</string>
    <string name="label_net_speed_relative_ratio">相对比例</string>
    <string name="label_net_speed_relative_distance">相对距离</string>
    <string name="label_net_speed_text_scale">文字缩放</string>
    <string name="label_net_speed_font">字体</string>
    <string name="summary_default">默认</string>
    <string name="summary_text_style_normal">普通</string>
    <string name="summary_text_style_bold">粗体</string>
    <string name="summary_text_style_italic">斜体</string>
    <string name="summary_text_style_bold_italic">粗斜体</string>
    <string name="label_net_speed_x_offset">X轴偏移</string>
    <string name="summary_mode_download">仅下载</string>
    <string name="summary_mode_all">上传和下载</string>
    <string name="summary_mode_upload">仅上传</string>
    <string name="toast_download_font">开始字体下载</string>
    <string name="toast_download_font_succeeded">字体下载成功</string>
    <string name="toast_download_font_failed">字体下载失败</string>
    <string name="label_net_speed_horizontal_scale">X轴缩放</string>
    <string name="action_license" translatable="false">License</string>
    <string name="action_homepage" translatable="false">Homepage</string>
    <string name="label_diagnosis">诊断</string>
    <string name="label_net_speed_hide_threshold">隐藏阈值</string>
    <string name="summary_net_speed_hide_threshold" formatted="false">当速度小于%s时隐藏状态栏网速图标</string>
    <string name="summary_threshold_error">输入的阈值不正确</string>
    <string name="summary_net_speed_unhide">不隐藏</string>
    <string name="alert_msg_guide" formatted="false">感谢您使用%s，我们尊重并保护您的个人信息，并在%s对相关事项进行了详细说明，包括应用所可能需要的设备敏感权限说明。\n在使用我们的产品前，请您认真阅读%s的全部内容。</string>

    <string name="label_pgyer" tools:ignore="MissingTranslation">Pgyer</string>
    <string name="label_firebase" tools:ignore="MissingTranslation">Firebase</string>
    <string name="label_payment_wxpay" tools:ignore="MissingTranslation">WeChat Pay</string>
    <string name="label_payment_alipay" tools:ignore="MissingTranslation">Alipay</string>
    <string name="label_payment_eth" tools:ignore="MissingTranslation">ETH</string>
    <string name="label_payment_paypal" translatable="false">Paypal</string>
    <string name="label_net_speed_service">网速指示器服务</string>
    <string name="label_net_speed_silence_channel">静默通知</string>
    <string name="label_net_speed_default_channel">活动通知</string>
    <string name="alert_msg_hide_threshold">当速度小于指定值时隐藏网速图标（单位B，1024B=1KB）</string>
    <string name="label_sim_card_config">配置SIM卡信息</string>
    <string name="alert_msg_add_imsi_config">输入您SIM卡的IMSI</string>
    <string name="label_imsi_config_tip">如果您使用多个SIM卡，可以单独配置每一张SIM卡的IMSI信息来显示详细的移动流量信息。IMSI信息可以尝试在拨号盘输入*#*#4636#*#*进行查看。</string>
    <string name="label_net_usage_config">网络使用情况配置</string>
    <string translatable="false" name="label_wifi">WLAN</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_donate_list">捐赠记录</string>
    <string name="toast_network_error">网络加载失败</string>
    <string name="toast_payment_tip">长按保存收款码</string>
    <string name="label_net_speed_min_unit">最小显示单位</string>
    <string name="alert_msg_miui_notification">MIUI系统需要到设置中开启“有通知时显示图标”选项，并将通知显示改为“原生样式”，才能正常显示状态网速。如果不生效可以尝试重启设备或更换主题。</string>
    <string name="summary_share_app">将应用推荐给朋友</string>
    <string name="summary_get_beta">获取应用的内测版本</string>
</resources>
