<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:title="@string/label_net_speed">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="key_general"
        app:title="@string/label_general">

        <SwitchPreferenceCompat
            android:key="net_speed_status"
            android:summaryOff="@string/switch_off"
            android:summaryOn="@string/switch_on"
            android:title="@string/label_net_speed"
            app:defaultValue="false"
            app:icon="@drawable/ic_launcher_icon" />

        <SwitchPreferenceCompat
            android:key="net_speed_auto_start"
            android:title="@string/label_net_speed_auto_start"
            app:defaultValue="false"
            app:icon="@drawable/ic_outline_restart_alt"
            app:summary="@string/summary_net_speed_auto_start" />

        <DropDownPreference
            android:key="net_speed_interval"
            app:defaultValue="1000"
            app:entries="@array/net_speed_interval"
            app:entryValues="@array/net_speed_interval_value"
            app:icon="@drawable/ic_baseline_timer"
            app:title="@string/label_net_speed_interval"
            app:useSimpleSummaryProvider="true" />

        <com.dede.nativetools.ui.MaterialEditTextPreference
            app:defaultValue="0"
            app:dialogMessage="@string/alert_msg_hide_threshold"
            app:icon="@drawable/ic_baseline_remove_circle"
            app:key="net_speed_hide_threshold"
            app:title="@string/label_net_speed_hide_threshold"
            tools:useSimpleSummaryProvider="true" />

        <com.dede.nativetools.ui.NavigatePreference
            app:eventName="高级设置"
            app:icon="@drawable/ic_outline_settings"
            app:navigateId="@id/action_netSpeed_to_netSpeedAdvanced"
            app:summary="@string/summary_net_speed_advanced"
            app:title="@string/label_net_speed_advanced" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="key_notification"
        app:title="@string/label_notification">

        <com.dede.nativetools.ui.CustomWidgetLayoutSwitchPreference
            android:key="net_speed_locked_hide"
            android:title="@string/label_net_speed_hide_lock_notification"
            app:defaultValue="true"
            app:icon="@drawable/ic_outline_phonelink_lock"
            app:summary="@string/summary_net_speed_hide_lock_notification"
            app:widgetLayout="@layout/override_preference_widget_switch_compat" />

        <com.dede.nativetools.ui.CustomWidgetLayoutSwitchPreference
            app:defaultValue="false"
            app:dependency="net_speed_hide_notification"
            app:icon="@drawable/ic_outline_data_usage"
            app:key="net_speed_usage"
            app:widgetLayout="@layout/override_preference_widget_switch_compat"
            app:summary="@string/summary_net_speed_usage"
            app:title="@string/label_net_speed_usage" />

        <SwitchPreferenceCompat
            android:key="net_speed_notify_clickable"
            android:title="@string/label_net_speed_notify_clickable"
            app:defaultValue="true"
            app:dependency="net_speed_hide_notification"
            app:icon="@drawable/ic_outline_touch"
            app:summary="@string/summary_net_speed_notify_clickable" />

        <SwitchPreferenceCompat
            android:title="@string/label_net_speed_notify_quick_closeable"
            app:defaultValue="false"
            app:dependency="net_speed_hide_notification"
            app:icon="@drawable/ic_outline_cancel"
            app:key="net_speed_notify_quick_closeable"
            app:summary="@string/summary_net_speed_notify_quick_closeable" />

        <com.dede.nativetools.ui.HideNotificationSwitchPreference
            app:defaultValue="false"
            app:disableDependentsState="true"
            app:icon="@drawable/ic_outline_notifications_off"
            app:key="net_speed_hide_notification"
            app:summary="@string/summary_net_speed_hide_notification"
            app:title="@string/label_net_speed_hide_notification" />

    </PreferenceCategory>

    <com.dede.nativetools.ui.FooterPreference />
</PreferenceScreen>
