<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/label_other">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="key_other"
        app:title="@string/label_other">

        <SwitchPreferenceCompat
            app:key="net_speed_auto_start"
            app:title="@string/label_net_speed_auto_start"
            app:defaultValue="false"
            app:icon="@drawable/ic_outline_restart_alt"
            app:summary="@string/summary_net_speed_auto_start" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_remove_circle"
            app:key="ignore_battery_optimize"
            app:persistent="false"
            app:summary="@string/summary_ignore_battery_optimize"
            app:title="@string/label_ignore_battery_optimize" />

        <com.dede.nativetools.ui.NightModeDropDownPreference
            app:defaultValue="-1"
            app:entries="@array/night_mode_toggle"
            app:entryValues="@array/night_mode_toggle_value"
            app:icon="@drawable/ic_outline_dark_mode"
            app:key="night_mode_toggle"
            app:title="@string/label_night_mode"
            app:useSimpleSummaryProvider="true" />

        <com.dede.nativetools.ui.NavigatePreference
            app:enableCopying="true"
            app:icon="@drawable/ic_outline_info"
            app:key="about"
            app:navigateId="@id/action_other_to_about"
            app:summary="@string/summary_about_version"
            app:title="@string/label_about" />

        <com.dede.nativetools.ui.NavigatePreference
            app:allowDividerAbove="true"
            app:eventName="捐赠"
            app:icon="@drawable/ic_volunteer_activism"
            app:navigateId="@id/action_other_to_dialogDonate"
            app:summary="@string/label_coffee"
            app:title="@string/action_donate" />

        <Preference
            app:icon="@drawable/ic_baseline_sentiment_very_satisfied"
            app:key="rate"
            app:persistent="false"
            app:title="@string/action_rate" />

        <Preference
            app:icon="@drawable/ic_action_share"
            app:key="share"
            app:persistent="false"
            app:summary="@string/summary_share_app"
            app:title="@string/action_share" />

        <com.dede.nativetools.ui.NavigatePreference
            app:eventName="@string/action_beta"
            app:icon="@drawable/ic_android_13_hero"
            app:navigateId="@id/action_other_to_dialogBeta"
            app:summary="@string/summary_get_beta"
            app:title="@string/action_beta" />

    </PreferenceCategory>
</PreferenceScreen>