<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/label_other">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="key_other"
        app:title="@string/label_other">

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_baseline_remove_circle_24"
            app:key="ignore_battery_optimize"
            app:summary="@string/summary_ignore_battery_optimize"
            app:title="@string/label_ignore_battery_optimize" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_outline_dark_mode_24"
            app:key="v28_night_mode_toggle"
            app:summaryOff="@string/summary_night_mode_follow_system"
            app:summaryOn="@string/switch_on"
            app:title="@string/label_night_mode" />

        <Preference
            app:icon="@drawable/ic_outline_info"
            app:key="about"
            app:summary="@string/summary_about_version"
            app:title="@string/label_about" />
    </PreferenceCategory>
</PreferenceScreen>