<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/label_net_speed_advanced">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/label_net_speed_advanced">

        <com.dede.nativetools.netspeed.typeface.FontDropDownPreference
            android:key="net_speed_font"
            app:defaultValue="Normal"
            app:entries="@array/net_speed_font"
            app:entryValues="@array/net_speed_font_value"
            app:iconSpaceReserved="false"
            app:title="@string/label_net_speed_font"
            app:useSimpleSummaryProvider="true" />

        <com.dede.nativetools.ui.TypefaceDropDownPreference
            android:title="@string/label_net_speed_style"
            app:defaultValue="1"
            app:entries="@array/net_speed_text_style"
            app:entryValues="@array/net_speed_text_style_value"
            app:iconSpaceReserved="false"
            app:key="net_speed_text_style"
            app:useSimpleSummaryProvider="true" />

        <DropDownPreference
            android:key="net_speed_mode_1"
            app:defaultValue="0"
            app:entries="@array/net_speed_mode"
            app:entryValues="@array/net_speed_mode_value"
            app:iconSpaceReserved="false"
            app:title="@string/label_net_speed_mode"
            app:useSimpleSummaryProvider="true" />

        <com.dede.nativetools.ui.SliderPreference
            android:stepSize="0.01"
            android:valueFrom="-0.5"
            android:valueTo="0.5"
            app:defaultValue="-0.06"
            app:iconSpaceReserved="false"
            app:key="net_speed_vertical_offset"
            app:title="@string/label_net_speed_y_offset" />

        <com.dede.nativetools.ui.SliderPreference
            android:stepSize="0.01"
            android:valueFrom="0"
            android:valueTo="1"
            app:defaultValue="0.6"
            app:iconSpaceReserved="false"
            app:key="net_speed_relative_ratio"
            app:title="@string/label_net_speed_relative_ratio" />

        <com.dede.nativetools.ui.SliderPreference
            android:stepSize="0.01"
            android:valueFrom="-0.5"
            android:valueTo="0.5"
            app:defaultValue="0.15"
            app:iconSpaceReserved="false"
            app:key="net_speed_relative_distance"
            app:title="@string/label_net_speed_relative_distance" />

        <com.dede.nativetools.ui.SliderPreference
            android:stepSize="0.01"
            android:valueFrom="0.5"
            android:valueTo="1.5"
            app:defaultValue="0.87"
            app:iconSpaceReserved="false"
            app:key="net_speed_text_scale"
            app:title="@string/label_net_speed_text_scale" />

        <com.dede.nativetools.ui.SliderPreference
            android:stepSize="0.01"
            android:valueFrom="-0.5"
            android:valueTo="0.5"
            app:defaultValue="0"
            app:iconSpaceReserved="false"
            app:key="net_speed_horizontal_offset"
            app:title="@string/label_net_speed_x_offset" />

        <com.dede.nativetools.ui.SliderPreference
            android:stepSize="0.01"
            android:valueFrom="0.2"
            android:valueTo="1.3"
            app:defaultValue="1"
            app:iconSpaceReserved="false"
            app:key="net_speed_horizontal_scale"
            app:title="@string/label_net_speed_horizontal_scale" />

    </PreferenceCategory>
</PreferenceScreen>