<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    android:label="@string/app_name"
    app:startDestination="@id/netSpeed">

    <fragment
        android:id="@+id/netSpeed"
        android:name="com.dede.nativetools.netspeed.NetSpeedFragment"
        android:label="@string/label_net_speed">
        <action
            android:id="@+id/action_netSpeed_to_about"
            app:destination="@id/about"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/about"
        android:name="com.dede.nativetools.about.AboutFragment"
        android:label="@string/label_about"
        tools:layout="@layout/fragment_about">
        <action
            android:id="@+id/action_about_to_openSource"
            app:destination="@id/openSource"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <deepLink app:uri="https://dede.nativetools/about" />
    </fragment>
    <fragment
        android:id="@+id/openSource"
        android:name="com.dede.nativetools.ui.OpenSourceFragment"
        android:label="@string/label_open_source"
        tools:layout="@layout/fragment_open_source" />
</navigation>