<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="@id/iv_preview"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="200dp" />

        <fragment
            android:id="@+id/net_speed_advanced_preferences"
            android:name="com.dede.nativetools.netspeed.NetSpeedAdvancedFragment$NetSpeedAdvancedPreferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/iv_preview" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_vertical_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:stepSize="0.01"
            android:value="0"
            android:valueFrom="-0.5"
            android:valueTo="0.5"
            app:labelBehavior="withinBounds"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/net_speed_advanced_preferences"
            app:tickVisible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/label_net_speed_y_offset"
            android:textAppearance="?android:attr/textAppearanceListItem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_vertical_offset" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_relative_ratio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:stepSize="0.01"
            android:value="0.5"
            android:valueFrom="0"
            android:valueTo="1"
            app:labelBehavior="withinBounds"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slider_vertical_offset"
            app:tickVisible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/label_net_speed_relative_ratio"
            android:textAppearance="?android:attr/textAppearanceListItem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_relative_ratio" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_relative_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:stepSize="0.01"
            android:value="0"
            android:valueFrom="-0.5"
            android:valueTo="0.5"
            app:labelBehavior="withinBounds"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slider_relative_ratio"
            app:tickVisible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/label_net_speed_relative_distance"
            android:textAppearance="?android:attr/textAppearanceListItem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_relative_distance" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_text_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:stepSize="0.01"
            android:value="1"
            android:valueFrom="0.5"
            android:valueTo="1.5"
            app:labelBehavior="withinBounds"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/slider_relative_distance"
            app:tickVisible="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/label_net_speed_text_scale"
            android:textAppearance="?android:attr/textAppearanceListItem"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/slider_text_scale" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>